make sure long breadcrumb links dont wrap weirdly

--- a/packages/ilios-common/app/styles/ilios-common/components/breadcrumbs.scss
+++ b/packages/ilios-common/app/styles/ilios-common/components/breadcrumbs.scss
@@ -7,6 +7,7 @@
   $h4: math.div($height, 4);
 
   display: flex;
+  flex-wrap: wrap;
   margin: 0.8rem;
   text-align: left;
 
